# Recipe-Bot

./: Best_Mini_Calzone_Recipe_-_How_to_Make_Mini_Calzones.rec  Cargo.toml  README.md
recipes/: Best_Pasta_Puttanesca_Recipe_-_How_to_Make_Pasta_Puttanesca.rec  Unknown_Title.rec
recipes/desert/: Peanut_Butter_Temptations.rec  Pecan_Pie.rec  Thin_Mints.rec
recipes/dinner/: Alfredo_Sauce.rec  Bacon_Wrapped_Chicken_Bites.rec  Baked_Boneless_Pork_Chops.rec  Baked_Mac_and_Cheese.rec  Baked_Pork_Tenderloin.rec  Baked_Potato_Soup.rec  Cheesy_Pizza_Tortellini.rec  Chicken_Broccoli_Cheddar_Soup.rec  Chicken_Enchiladas.rec  Chicken_Nachos.rec  Chicken_Tetrazzini.rec  Crock_Pot_Shredded_Pork_Tenderloin.rec  Easy_Baked_Ribs.rec  Eat_Out.rec  Garlic_Butter_Chicken.rec  Garlic_Spaghetti.rec  Grilled_Chicken.rec  Hamburger_Helper.rec  Jack_Daniels_BBQ_Sauce.rec  Meatloaf.rec  Mississippi_Pot_Roast.rec  Orange_Chicken_Stir_Fry.rec  Panera_Mac_and_Cheese.rec  Pasta_Limone.rec  Pulled_Pork_Roast.rec  Signature_Spicy_Smoky_Sweet_Chili.rec  Soda_Roast.rec  Taco_Spaghetti.rec
recipes/sides/: Baked_Brocolli.rec  Easy_Garlic_Fries.rec  Seasoned_Potatoes.rec
schedule/: Friday.rec  Monday.rec  Saturday.rec  Thursday.rec  Wednesday.rec  ingredients.sup  schedule.txt
src/: main.rs
