[package]
name = "recipe_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24.0" # Gives us egui, epi and web+native backends
rand = "0.8.5"
tokio = { version = "1.28.0", features = ["full"] }
actix-web = "4.3.1"
actix-files = "0.6.2"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.13"
printpdf = "0.7.0"

[target.'cfg(any(target_os = "windows"))'.dependencies] 
 winapi = { version = "0.3.9", features = ["winuser"] }